# Patrolling-robot

./: README.md
kinect-lcm/: CMakeLists.txt
kinect-lcm/lcmtypes/: kinect_projected_point2d_t.lcm  kinect_segment_t.lcm  kinect_segmentlist_t.lcm  kinect_segmentlist_t.lcm~  kinect_segmentlist_v1_t.lcm  kinect_segmentlist_v2_t.lcm
kinect-lcm/libfreenect/: CMakeLists.txt  out
kinect-lcm/pod-build/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
lcm2ros/: CMakeLists.txt  CMakeLists.txt~  README
lcm2ros/lcmtypes/c/lcmtypes/: lcm2ros.h
lcm2ros/pod-build/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  install_manifest.txt
lcm2ros/pod-build/catkin_generated/: generate_cached_setup.py  setup_cached.sh
lcm2ros/pod-build/catkin_generated/installspace/: .rosinstall  setup.sh
lcm2ros/pod-build/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
lcm2ros/pod-build/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
lcm2ros/pod-build/include/lcmtypes/: lcm2ros.hpp
lcm2ros/pod-build/lib/pkgconfig/: lcmtypes_lcm2ros.pc
lcm2ros/src/: lcmtoRos_segmentlist.cpp  lcmtoRos_segmentlist_v2.cpp
point-cloud-tutorial-kobe/: CMakeLists.txt  CMakeLists.txt~  README
point-cloud-tutorial-kobe/pod-build/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
point-cloud-tutorial-kobe/src/: haptic-array-generator.cpp  haptic-array-generator.h  listener.c~  rv-asus-viewer.cpp  rv-asus-viewer.cpp~  rv-cv-pcl-utils.cpp  rv-cv-pcl-utils.h  rv-kinect-frame-pcl-utils.cpp  (+9 more)
wearnavi-lcmtypes/: CMakeLists.txt  README
(+102 files in other folders)
